# ucsb-counterspeech-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_full_data.json  thread_context_classification.py
annotation_app/: app.py
annotation_app/annotation_storage/: annotations_20260628.jsonl  annotations_20260709.csv  annotations_20260710.csv  annotations_20260710.jsonl  annotations_20260712.csv  annotations_20260712.jsonl  annotations_20260713.csv  annotations_20260713.jsonl  annotations_by_thread.json  llm_human_agreement.json  thread_assignments.json
annotation_storage/: annotations_20260311.csv  annotations_20260311.jsonl  annotations_20260624.csv  annotations_20260624.jsonl  annotations_20260628.csv  annotations_20260709.jsonl  thread_assignments.json
data/: extracted_68_threads.json
data_annotation/: extract_features.py
gepa_model_optimization/: optimization_results.json  optimized_counterspeech.json  run_optimization.py
gepa_prompt_optimization/: mipro_optimization.py  run_optimization.py  simple_mipro_results.json
llm_annotation_pipeline/: README.md  __init__.py  datasets.py  runner.py  schemas.py
old_runs/: classification_no_thread_context.py
results_thread_context_improved/: classifications_gpt-4o-mini_combined.json
scripts/: build_thread_annotation_summary.py  check_inter_annotator_agreement.py  classify_thread_context.py  compare_llm_human_agreement.py  convert_threads_to_items.py  diagnose_data.py  extract_features.py  format_annotations_readable.py  select_original_posts_for_annotation.py  stratified_sample_original_posts.py
(+53 files in other folders)
