[project]
name = "ucsbcounterspeechproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "litellm>=1.76.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "vllm>=0.10.1.1",
]
